--- a/src/features/hellmutt/Hellmutt.module.css
+++ b/src/features/hellmutt/Hellmutt.module.css
@@ -3,11 +3,6 @@
 	height: 100%;
 }
 
-.ramps {
-  background-color: yellow;
-	flex: 1;
-}
-
 .store {
   background-color: grey;
 	display: flex;
@@ -16,9 +11,13 @@
 }
 
 .rampsArea {
+	height: 100%;
 	display: flex;
 	flex:1;
+	flex-direction: column;
+	justify-content: center;
 }
+
 
 .fieldsArea {
 	flex:2;
@@ -29,15 +28,23 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex: 2 1;
-	margin-top: 40px;
 	background: brown;
 }
 
-.await {
+.buttons {
 	margin: 20px;
-	background: grey;
-	width: 100px;
-	height: 90px;
-	border-radius: 170px;
+	padding: 5px 20px;
+	display: inline-block !important;
+	float:left;
+	background: white;
+	font-size: 1.2em;
+	height: 55px;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	user-select: none;
 }
+
+.buttons:hover { background:#ddd; }
+
 
