introducing drop container

--- a/src/features/hellmutt/Truck.module.css
+++ b/src/features/hellmutt/Truck.module.css
@@ -11,3 +11,8 @@
 	color: #fff;
 }
 
+
+/* could delete it */
+.approaching { margin-left: 390px !important; }
+.leaving { margin-left: 0px !important; }
+
