--- a/src/features/hellmutt/Queue.module.css
+++ b/src/features/hellmutt/Queue.module.css
@@ -1,27 +1,8 @@
 .queue {
-	background:#eee;
+	background:#979797;
 	color:#fff;
 	width:100%;
 	display:flex;
 	flex-direction:row;
-}
-
-.tType_s {
-	background:red;
-}
-
-.tType_m {
-	background:green;
-}
-
-.tType_xl {
-	background:blue;
-}
-
-.tType_xl, .tType_m, .tType_s {
-	margin: 5px 10px;
-	display: table;
-	height: 20px;
-	padding: 2px 10px;
 }
 
