some errors present

--- a/src/views/StoreView/css/Ramp.module.css
+++ b/src/views/StoreView/css/Ramp.module.css
@@ -4,6 +4,6 @@
 	margin: 20px;
 	background: #555;
 	width: 160px;
-	height: 45px;
-	border: 3px dashed #ccc;
+	height: 55px;
+	border: 3px dashed #ddd;
 }
