--- a/src/views/StoreView/css/Admin.module.css
+++ b/src/views/StoreView/css/Admin.module.css
@@ -11,7 +11,7 @@
 	color: #555;
 	cursor: pointer;
 	background: orange;
-	margin: 5px 10px;
+	margin: 10px;
 	display: table;
 	height: 20px;
 	padding: 2px 10px;
