--- a/src/views/StoreView/css/Dock.module.css
+++ b/src/views/StoreView/css/Dock.module.css
@@ -1,13 +1,16 @@
 .ramps {
 	display:block;
-	border-top: 1px solid #2b2b2b;
+	border-top: 4px dotted #ddd;
 	height: 100px;
 	position:relative;
-	background: darkred;
+	background: #713535;
 }
 
+.ramps:first-child {
+	border-top: 0px;
+}
 .ramps:last-child {
-	border-bottom: 1px solid #2b2b2b;
+	border-bottom: 0px;
 }
 
 /* .blockade { background: rgba(0,0,0,0.3); } */
