--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -13,6 +13,7 @@
 }
 
 .rampsArea {
+	border-left: 3px dashed orange;
 	height: 100%;
 	display: flex;
 	flex:1;
@@ -29,7 +30,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex: 2 1;
-	background: brown;
+	background: #713535;
 }
 
 /*
