--- a/src/views/StoreView/css/TruckPreview.module.css
+++ b/src/views/StoreView/css/TruckPreview.module.css
@@ -3,7 +3,7 @@
 .tType_xl { background:blue; }
 
 .tType_xl, .tType_m, .tType_s {
-	margin: 5px 10px;
+	margin: 10px;
 	display: table;
 	height: 20px;
 	padding: 2px 10px;
