--- a/src/views/StoreView/css/Truck.module.css
+++ b/src/views/StoreView/css/Truck.module.css
@@ -1,6 +1,13 @@
 .truck {
 	transition: all 1.5s ease-in-out;
-	display:block;
+
+	display:flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 5px;
+	justify-content: space-evenly;
+	align-content:flex-start;
+
 	width:200px;
 	height:80px;
 	background: black;
@@ -9,6 +16,9 @@
 	left: -200px;
 	margin:0;
 	color: #fff;
+
+	padding-left: 50px;
+	padding-bottom: 15px;
 }
 
 
