level approach instead of inventing timer :)

--- a/src/views/StoreView/css/Truck.module.css
+++ b/src/views/StoreView/css/Truck.module.css
@@ -23,6 +23,6 @@
 
 
 /* could delete it */
-.approaching { margin-left: 390px !important; }
-.leaving { margin-left: 0px !important; }
+/* .approaching { margin-left: 390px !important; } */
+/* .leaving { margin-left: 0px !important; } */
 
