--- a/src/views/StoreView/css/Admin.module.css
+++ b/src/views/StoreView/css/Admin.module.css
@@ -20,3 +20,13 @@
 .btn:hover {
 	background: #ffc75f;
 }
+
+.btnS {
+	color: #fff;
+	cursor: pointer;
+	background: green;
+	margin: 10px;
+	display: table;
+	height: 20px;
+	padding: 2px 10px;
+}
