--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -21,32 +21,13 @@
 	justify-content: center;
 }
 
-
-.zonesArea {
-	flex:2;
-}
+.zonesArea { flex:2; }
 
 .zonesRow {
 	display: flex;
 	flex-wrap: wrap;
 	flex: 2 1;
 	background: #713535;
+	padding-bottom: 20px;
 }
 
-/*
-.buttons {
-	margin: 20px;
-	padding: 5px 20px;
-	display: inline-block !important;
-	float:left;
-	background: white;
-	font-size: 1.2em;
-	height: 55px;
-	text-align: center;
-	vertical-align: middle;
-	cursor: pointer;
-	user-select: none;
-}
-
-.buttons:hover { background:#ddd; }
-*/
