--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -1,7 +1,15 @@
 .timer {
   font-size: 2em;
+	position: absolute;
+  top: -5px;	
+	left: 10px;
 	color: #eee;
-	padding: 4px 20px;
+	padding: 0px 20px;
+	background: darkred;
+}
+
+.timerOuter {
+	position: relative;
 	width: 80px;
-	background: #333;
+	margin: 10px 0 10px 10px;
 }
