--- a/src/views/StoreView/css/Admin.module.css
+++ b/src/views/StoreView/css/Admin.module.css
@@ -7,26 +7,21 @@
 	border-bottom: 4px dotted #555;
 }
 
-.btn {
+.btn:hover, .btnS:hover, .btnG:hover {
+	filter: brightness(1.6) saturate(1.8);
+}
+
+.btn, .btnS, .btnG {
+	filter: brightness(1) saturate(1);
 	color: #fff;
 	cursor: pointer;
-	background: orange;
 	margin: 10px;
 	display: table;
 	height: 20px;
 	padding: 2px 10px;
 }
 
-.btn:hover {
-	background: #ffc75f;
-}
+.btn { background: orange;}
+.btnS { background: grey;}
+.btnG { background: green;}
 
-.btnS {
-	color: #fff;
-	cursor: pointer;
-	background: green;
-	margin: 10px;
-	display: table;
-	height: 20px;
-	padding: 2px 10px;
-}
