--- a/src/views/StoreView/css/Dock.module.css
+++ b/src/views/StoreView/css/Dock.module.css
@@ -3,7 +3,7 @@
 	border-top: 4px dotted #ddd;
 	height: 100px;
 	position:relative;
-	background: #713535;
+	background: #a27c7c;
 }
 
 .ramps:first-child {
