--- a/src/views/StoreView/css/Drop.module.css
+++ b/src/views/StoreView/css/Drop.module.css
@@ -2,8 +2,8 @@
 	/* transition: all 3s ease-in-out; */
 	height: 100%;
 	width: 100%;
-	background: orange;
-	opacity: 0.2;
+	background: white;
+	opacity: 0.6;
 	display: flex;
 	z-index: 10001;
 	position: absolute;
