--- a/src/views/StoreView/css/Ramps.module.css
+++ b/src/views/StoreView/css/Ramps.module.css
@@ -1,5 +1,5 @@
 .rampsExternal {
-  background-color: #6a6a49;
+  background-color: #a7a7a7;
 	/* height: 100%; */
 	flex: 1 1;
 	flex-direction: column;
