--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -31,3 +31,12 @@
 	padding-bottom: 20px;
 }
 
+.block {
+	height: 100%;
+	width: 100%;
+	background: red;
+	opacity: 0.2;
+	display: flex;
+	z-index: 10001;
+	position: absolute;
+}
