--- a/src/views/StoreView/css/MsgBoard.module.css
+++ b/src/views/StoreView/css/MsgBoard.module.css
@@ -5,7 +5,7 @@
 	background: #666;
 	display: flex;
 	flex-direction: row;
-	padding: 2px 12px;
+	padding: 2px 0 2px 12px;
 	margin-top: 4px;
 	opacity: 0;
 	margin-left: 130px;
