--- a/src/views/StoreView/css/ResultsBar.module.css
+++ b/src/views/StoreView/css/ResultsBar.module.css
@@ -18,3 +18,10 @@
 	padding: 2px 10px;
 	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
 }
+
+.calendar {
+	font-size: 1.2em;
+	margin: 13px;
+	background: darkred;
+	color: #fff;
+}
