--- a/src/views/StoreView/css/MsgBoard.module.css
+++ b/src/views/StoreView/css/MsgBoard.module.css
@@ -1,12 +1,12 @@
 .msg {
 	position: absolute;
-	color: #eee;
-	font-size: 2em;
-	background: #666;
+	color: #2a2a2a;
+	font-size: 1.6em;
+	background: aliceblue;
 	display: flex;
 	flex-direction: row;
 	padding: 2px 0 2px 12px;
-	margin-top: 4px;
+	margin-top: 7px;
 	opacity: 0;
 	margin-left: 130px;
 	transition: margin-left 1s ease-in-out, opacity 0.6s ease-in-out;
@@ -16,10 +16,10 @@
 	filter: brightness(1) saturate(1);
 	color: #fff;
 	cursor: pointer;
-	margin: 0 0 0 10px;
+	margin: -2px 0 -2px 10px;
 	display: table;
-	height: 20px;
-	padding: 0 10px;
+	height: 40px;
+	padding: 2px 12px 0;
 	background: green;
 }
 
