--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -1,16 +1,20 @@
-.timer {
-  font-size: 2em;
-	position: absolute;
+.timer, .timerZero {
+  font-size: 4.4em;
+	/* position: absolute; */
   top: -5px;	
 	left: 10px;
 	color: #eee;
-	padding: 0px 20px;
-	background: darkred;
-	border-radius: 50px;
+	padding: 0px 10px;
 }
+
+.timer { background: red; }
+.timerZero { 
+	display: none;
+	background: grey; }
+
 
 .timerOuter {
 	position: relative;
-	width: 80px;
-	margin: 10px 0 10px 10px;
+	width: 95px;
+	margin: 10px 0;
 }
