--- a/src/views/StoreView/css/Dock.module.css
+++ b/src/views/StoreView/css/Dock.module.css
@@ -3,7 +3,9 @@
 	/* border-top: 4px dotted #ddd; */
 	height: 100px;
 	position:relative;
-	background: #a27c7c;
+	/* background: #a27c7c; */
+	background: url(i/dock_floor.png);
+	background-repeat: repeat-x;
 }
 
 .ramps:first-child {
