--- a/src/views/StoreView/css/Truck.module.css
+++ b/src/views/StoreView/css/Truck.module.css
@@ -4,36 +4,59 @@
 	display:flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	gap: 5px;
+	gap: 0px;
 	justify-content: space-evenly;
 	align-content:flex-start;
 
-	background: black;
 	position: absolute;
 	top: 0px;
 	margin:0;
 	color: #fff;
-	padding-left: 70px;
 	padding-bottom: 15px;
 
 	height:85px;
 }
 
 .truck_s {
-	background: #444;
-	width:130px;
-	left: -130px;
+	width: 155px;
+	left: -165px;
+	padding-left: 80px;
+	background-image: url(i/truck_s.png);
 }
 
 .truck_m {
-	width:200px;
-	left: -200px;
-	background: #333;
+	width:230px;
+	left: -250px;
+	padding-left: 90px;
+	background-image: url(i/truck_m.png);
 }
 
 .truck_xl {
-	width:270px;
-	left: -270px;
-	background: #222;
+	width: 346px;
+	left: -374px;
+	/* background: #222; */
+	padding-left: 98px;
+	background-image: url(i/truck_xl.png);
+}
+
+.tcover_s, .tcover_m, .tcover_xl {
+	position:absolute;
+	z-index:100002;
+	height:83px;
+}
+
+.tcover_s {
+	width: 150px;
+	background-image: url(i/namiot_s.png);
+}
+
+.tcover_m {
+	width:230px;
+	background-image: url(i/namiot_m.png);
+}
+
+.tcover_xl {
+	width:344px;
+	background-image: url(i/namiot_xl.png);
 }
 
