basic sounds added, plus Bernards touch polyfill

--- a/src/views/StoreView/css/TruckPreview.module.css
+++ b/src/views/StoreView/css/TruckPreview.module.css
@@ -16,6 +16,7 @@
 	height: 20px;
 	padding: 2px 10px;
 	transition: margin-left 1s ease-in-out, opacity 0.6s ease-in-out;
+	touch-action: none;
 
 }
 
