--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -40,3 +40,27 @@
 	z-index: 10001;
 	position: absolute;
 }
+
+
+
+.levelTimes {
+	width: 100%;	
+	background: #979797;
+	display: flex;
+}
+
+.levelTime {
+	background: gray;
+	font-size: 1.5em;
+	color: #333;
+	/* font-weight: bold; */
+	text-align: center;
+	margin-top: 10px;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	display: table;
+	height: 32px;
+	width: 45px;
+	padding: 2px 10px;
+}
