--- a/src/views/StoreView/css/TruckPreview.module.css
+++ b/src/views/StoreView/css/TruckPreview.module.css
@@ -1,9 +1,10 @@
 .tType_s { background:#444;width:25px }
 .tType_m { background:#333; width:50px }
 .tType_xl { background:#222; width:85px }
+.tType_bonus { background:#533939; width:25px }
 
 
-.tType_xl, .tType_m, .tType_s {
+.tType_xl, .tType_m, .tType_s, .tType_bonus {
   font-size: 1.5em;
 	filter: brightness(0.9) saturate(0.9);
 	/* margin: 10px 0px 10px 10px; */
@@ -20,7 +21,7 @@
 
 }
 
-.tType_xl:hover, .tType_m:hover, .tType_s:hover {
+.tType_xl:hover, .tType_m:hover, .tType_s:hover, .tType_bonus:hover {
 	filter: brightness(1.4) saturate(1.4);
 	cursor: pointer;
 }
