--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -8,7 +8,7 @@
 	z-index: 9001;
   background-color: grey;
 	display: flex;
-	flex: 2;
+	flex: 2 1;
 	flex-wrap: wrap;
 }
 
@@ -63,4 +63,14 @@
 	height: 32px;
 	width: 45px;
 	padding: 2px 10px;
+}
+
+
+
+@media only screen and (min-width: 100px) and (max-width: 1000px) {
+
+	.store {
+		flex: 1.3 1;
+	}
+
 }
