work in progress, selected pallette is now blinking

--- a/src/views/StoreView/css/Pallet.module.css
+++ b/src/views/StoreView/css/Pallet.module.css
@@ -12,7 +12,7 @@
 	cursor:pointer;
 }
 
-.pallet:hover {
+.pallet:hover, .selected {
 	filter: brightness(1.6) saturate(1.6);
 	/* filter: brightness(1.7); */
 }
