--- a/src/views/StoreView/css/ResultsBar.module.css
+++ b/src/views/StoreView/css/ResultsBar.module.css
@@ -3,7 +3,6 @@
 	background: #979797;
 	height: 55px;
 	float: right;
-	margin-right:10px;
 }
 
 .empty {
@@ -21,6 +20,10 @@
 	width: 45px;
 	padding: 2px 10px;
 	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.empty:last-child, .res:last-child {
+	margin-right: 10px !important;
 }
 
 .res {
