--- a/src/views/StoreView/css/Admin.module.css
+++ b/src/views/StoreView/css/Admin.module.css
@@ -11,7 +11,7 @@
 	filter: brightness(1.6) saturate(1.8);
 }
 
-.btn, .btnS, .btnG {
+.btn, .btnS, .btnG, .btnB {
 	filter: brightness(1) saturate(1);
 	color: #fff;
 	cursor: pointer;
@@ -24,4 +24,5 @@
 .btn { background: orange;}
 .btnS { background: grey;}
 .btnG { background: green;}
+.btnB { background: royalBlue;}
 
