--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -16,7 +16,7 @@
 	margin-bottom: 10px;
 	display: table;
 	height: 20px;
-	padding: 2px 10px;
+	padding: 2px 0;
 	background: #979797;
 	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
 }
