--- a/src/views/StoreView/css/Truck.module.css
+++ b/src/views/StoreView/css/Truck.module.css
@@ -48,8 +48,8 @@
 
 .tcover_bonus {
 	width: 150px;
-	background: #39686b;
-	border-bottom: 24px solid darkslategray;
+	background: #424ca8;
+	border-bottom: 24px solid #2e287d;
 	margin-bottom: 25px;
 }
 
