--- a/src/views/StoreView/css/Pallet.module.css
+++ b/src/views/StoreView/css/Pallet.module.css
@@ -17,3 +17,9 @@
 	/* filter: brightness(1.7); */
 }
 
+@media only screen and (min-width: 100px) and (max-width: 900px) {
+	.pallet {
+		width: 17px;
+	}
+}
+
