--- a/src/views/StoreView/css/ResultsBar.module.css
+++ b/src/views/StoreView/css/ResultsBar.module.css
@@ -1,17 +1,19 @@
 .resbar {
 	display: flex;
 	background: #979797;
-	height: 55px;
+	height: 90px;
 	float: right;
+	padding-top:15px;
 }
 
 .empty {
+	border-radius:5px;
 	background: gray;
-  font-size: 1.5em;
+  font-size: 1.4em;
 	color: #777;
 	font-weight: bold;
 	text-align: center;
-	margin-top: 10px;
+	margin-top: 22px;
 	margin-right: 0px;
 	margin-bottom: 10px;
 	margin-left: 10px;
@@ -27,9 +29,11 @@
 }
 
 .res {
-	background: aliceblue;
-  font-size: 1.5em;
-	margin-top: 10px;
+	color: #333;
+	border-radius:5px;
+	background: #d3dce2;
+  font-size: 1.4em;
+	margin-top: 22px;
 	margin-right: 0px;
 	margin-bottom: 10px;
 	margin-left: 10px;
@@ -41,8 +45,18 @@
 
 .calendar {
 	font-size: 1.5em;
-	margin: 10px;
-	padding: 2px 10px;
-	background: grey;
-	color: #fff;
+	margin: 4px 26px;
+	color: #333;
+	background-image: url(i/topb.png);
+	background-position-y:364px;
+	background-position-x:-31px;
+	height:56px;
+	width:50px;
+}
+
+.calendarInner {
+	width:47px;
+	margin-top:17px;
+	display:inline-block;
+	text-align:center;
 }
