--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -1,22 +1,32 @@
 .timer, .timerZero {
-	color: #eee;
-	padding: 2px 10px;
+	color: #333;
+	padding: 32px 0 0 27px;
+	background-image: url(i/topb.png);
+	background-position-y:452px;
+	background-position-y:-15px;
+	height:56px;
+	width:80px;
+	display: flex;
+	margin-top: -8px;
 }
 
-.timer { background: red; }
+.timer { 
+	/* background: red; */ 
+}
 
 .timerZero { 
 	display: none;
 	background: grey; }
 
 .timerOuter {
-	font-size: 1.5em;
-	margin-top: 10px;
-	margin-right: 0px;
-	margin-bottom: 10px;
-	display: table;
-	height: 20px;
-	padding: 2px 0;
-	background: #979797;
-	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
+	font-size: 1.4em;
+	/* margin-top: 10px; */
+	/* margin-right: 0px; */
+	/* margin-bottom: 10px; */
+	/* display: table; */
+	/* height: 70px; */
+	/* padding: 2px 0; */
+	/* background: #979797; */
+	/* transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out; */
+
 }
