--- a/src/views/StoreView/css/Zone.module.css
+++ b/src/views/StoreView/css/Zone.module.css
@@ -11,3 +11,10 @@
 	/* border: 3px dashed #ddd; */
 }
 
+@media only screen and (min-width: 100px) and (max-width: 900px) {
+.zone {
+	margin: 10px 0px 0px 10px;
+	width: 80px;
+	height: 80px;
+}
+}
