--- a/src/views/StoreView/css/Drop.module.css
+++ b/src/views/StoreView/css/Drop.module.css
@@ -1,9 +1,6 @@
-.truck_xl .cover {
-	left:0px !important;
-}
-
 .cover {
 	/* transition: all 3s ease-in-out; */
+	left:0px !important;
 	height: 100%;
 	width: 100%;
 	background: white;
@@ -11,4 +8,5 @@
 	display: flex;
 	z-index: 10001;
 	position: absolute;
+	user-select: none;
 }
