--- a/src/views/StoreView/css/MsgBoard.module.css
+++ b/src/views/StoreView/css/MsgBoard.module.css
@@ -15,11 +15,16 @@
 	transition: margin-left 1s ease-in-out, opacity 0.6s ease-in-out;
 }
 
+.msgCnt {
+	display:flex;
+	flex-direction: column;
+}
+
 .msgContent {
 	color: #ccc;
 	font-size:1.3em;
-	margin-bottom:1.3em;
 	text-align:center;
+	margin: 0.5em 0;
 }
 
 .msgBtn {
@@ -101,6 +106,7 @@
 	background-image: url(i/start.png);
 	background-position-y: 6px;
 	background-position-x: 4px;
+	margin-bottom:10px;
 }
 
 .messy {
@@ -189,6 +195,7 @@
 	margin:0 auto 30px;
 	background-position-y: 6px;
 	background-position-x: 4px;
+	margin-top: 15px;
 }
 
 
