--- a/src/views/StoreView/css/Pallet.module.css
+++ b/src/views/StoreView/css/Pallet.module.css
@@ -19,7 +19,8 @@
 
 @media only screen and (min-width: 100px) and (max-width: 900px) {
 	.pallet {
-		width: 17px;
+		width: 14px;
+		height: 17px;
 	}
 }
 
