--- a/src/views/StoreView/css/MsgBoard.module.css
+++ b/src/views/StoreView/css/MsgBoard.module.css
@@ -11,7 +11,6 @@
 	flex-direction: column;
 	padding: 4% 10%;
 	opacity: 0;
-	/* margin-left: 130px; */
 	transition: margin-left 1s ease-in-out, opacity 0.6s ease-in-out;
 }
 
@@ -46,7 +45,6 @@
 	flex-direction: row;
 	display: flex;
 	margin: 0 auto;
-	/* background: #aaa; */
 	border-radius: 10px 10px 0 0 ;
 }
 
@@ -67,8 +65,6 @@
 	background: #515151;
 	border-top: 5px solid grey;
 	border-bottom: 5px solid grey;
-	/* border-radius:10px; */
-	padding: 0 25px;
 }
 
 .msgWindow {
@@ -82,7 +78,7 @@
 	position:relative;
 	width:180px;
 	height:180px;
-	background-image: url(i/stihl96.png);
+	background-image: url(i/sprite2.png);
 	background-position-y: 6px;
 	background-position-x: 4px;
 	margin:20px;
@@ -109,7 +105,7 @@
 	position:absolute;
 	width:180px;
 	height:180px;
-	background-image: url(i/stihl96cup.png);
+	background-image: url(i/sprite1.png);
 	background-position-y: 6px;
 	background-position-x: 4px;
 	top:0px;
@@ -119,21 +115,13 @@
 .stwatch {
 	width:180px;
 	height:180px;
-	background-image: url(i/stwatch.png);
+	background-image: url(i/sprite2.png);
 	margin:20px;
-	background-position-y: 6px;
-	background-position-x: 4px;
+	background-position-y: 5px;
+	background-position-x: -192px;
 	opacity:0;
 	transition: opacity 1.6s ease-in-out;
 }
-
-/*
-.animate { 
-	transform: scale(1.3);
-	opacity:1;
-	transition: transform, opacity 1.6s ease-in-out;
-}
-*/
 
 .timeResult {
 	font-size:1.3em;
@@ -147,9 +135,9 @@
 .bonus {
 	width:180px;
 	height:180px;
-	background-image: url(i/bonus.png);
+	background-image: url(i/sprite2.png);
 	background-position-y: 4px;
-	background-position-x: 4px;
+	background-position-x: -371px;
 	margin:20px;
 	opacity:0;
 	transition: opacity 1.6s ease-in-out;
@@ -167,7 +155,6 @@
 .bonusResult {
 	font-size:1.2em;
 	color:#b9b9b9;
-	/* color: #333; */
 	font-weight:bold;
 	text-align: center;
 	position:relative;
@@ -182,12 +169,72 @@
 	background-image: url(i/truckArt.png);
 	margin:0 auto 30px;
 	background-position-y: 6px;
-	background-position-x: 4px;
+	background-position-x: -10px;
+	background-repeat: no-repeat;
 	margin-top: 15px;
 }
 
+.topRes {
+	display: flex;
+}
 
+.resBis {
+	color: #333;
+	border-radius:5px;
+	background: #d3dce2;
+  font-size: 1.1em;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	display: table;
+	height: 20px;
+	padding: 2px 10px;
+	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
+	border-bottom: 4px solid #a8b7c2;
+}
 
+.resEmptyBis, .resEmptyPrim {
+	border-radius: 5px;
+	background: gray;
+	font-size: 1.1em;
+	color: #555;
+	font-weight: bold;
+	text-align: center;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	display: table;
+	height: 41px;
+	width: 64px;
+	padding: 2px 10px;
+}
+
+.resEmptyPrim {
+	margin-top:26px;
+	margin-right:20px;
+}
+
+.palHdr {
+	background-image: url(i/sprite1.png);
+	position:relative;
+	width:90px;
+	height:90px;
+	background-position-y: -38px;
+	background-position-x: -536px;
+	margin-left:16px;
+	margin-right:16px;
+}
+
+.palCnt {
+	color: #d5c69c;
+	font-size:1.2em;
+	font-weight: bold;
+	position: absolute;
+	top: 17px;
+	width: inherit;
+	text-align: center;
+}
 
 @media only screen and (min-width: 100px) and (max-width: 900px) {
 
@@ -226,7 +273,6 @@
 	background: #515151;
 	border-top: 3px solid grey;
 	border-bottom: 3px solid grey;
-	/* border-radius:10px; */
 	padding: 0 15px;
 }
 
@@ -310,6 +356,29 @@
 
 .truckArt {
 	margin: 0;
+}
+
+.resEmptyPrim {
+	margin-top: 12px;
+	font-size: 0.7em;
+	height:25px;
+	width:45px;
+}
+
+.palHdr {
+	background-image: url(i/sprite1mob.png);
+	position:relative;
+	width:42px;
+	height:50px;
+	background-position-y: -20px;
+	background-position-x: -308px;
+	margin-left:20px;
+}
+
+.palCnt {
+	font-size:0.9em;
+	font-weight: normal;
+	top: 6px;
 }
 
 }
