--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -1,13 +1,18 @@
 .timer, .timerZero {
-	color: #333;
-	padding: 32px 0 0 27px;
-	background-image: url(i/topb.png);
-	background-position-y:452px;
-	background-position-y:-15px;
-	height:56px;
-	width:80px;
-	display: flex;
-	margin-top: -8px;
+	/* color: #333; */
+	color: #eee;
+	border-radius: 5px;
+	background: #d35f5f;
+	font-size: 1.4em;
+	margin-top: 22px;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	display: table;
+	height: 20px;
+	padding: 2px 10px;
+	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
+	border-bottom: 4px solid #ae6060;
 }
 
 .timer { 
@@ -18,15 +23,4 @@
 	display: none;
 	background: grey; }
 
-.timerOuter {
-	font-size: 1.4em;
-	/* margin-top: 10px; */
-	/* margin-right: 0px; */
-	/* margin-bottom: 10px; */
-	/* display: table; */
-	/* height: 70px; */
-	/* padding: 2px 0; */
-	/* background: #979797; */
-	/* transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out; */
 
-}
