--- a/src/views/StoreView/css/Drop.module.css
+++ b/src/views/StoreView/css/Drop.module.css
@@ -1,7 +1,8 @@
 .cover {
 	/* transition: all 3s ease-in-out; */
 	left: 0px;
-	height: inherit;
+	top: 0px;
+	bottom: 0px;
 	width: 100%;
 	background: white;
 	opacity: 0.5;
@@ -16,7 +17,7 @@
 		/* right: 14px; */
 		right: 0px;
 		left: unset;
-		height: inherit;
-		width: inherit;
+		height: 100%;
+		width: 100%;
 	}
 }
