--- a/src/views/StoreView/css/ResultsBar.module.css
+++ b/src/views/StoreView/css/ResultsBar.module.css
@@ -9,11 +9,12 @@
 .empty {
 	border-radius:5px;
 	background: gray;
-  font-size: 1.4em;
+  /* font-size: 1.4em; */
+  font-size: 28px;
 	color: #777;
 	font-weight: bold;
 	text-align: center;
-	margin-top: 22px;
+	margin-top: 12px;
 	margin-right: 0px;
 	margin-bottom: 10px;
 	margin-left: 10px;
@@ -22,6 +23,7 @@
 	width: 45px;
 	padding: 2px 10px;
 	transition: margin-left 1s ease-in-out, opacity 0.5s ease-in-out;
+	border-bottom: 4px solid #777;
 }
 
 .empty:last-child, .res:last-child {
@@ -32,8 +34,8 @@
 	color: #333;
 	border-radius:5px;
 	background: #d3dce2;
-  font-size: 1.4em;
-	margin-top: 22px;
+  font-size: 28px;
+	margin-top: 12px;
 	margin-right: 0px;
 	margin-bottom: 10px;
 	margin-left: 10px;
@@ -49,7 +51,7 @@
 }
 
 .calendar {
-	font-size: 1.5em;
+	font-size: 26px;
 	margin: 4px 26px;
 	color: #333;
 	background-image: url(i/topb.png);
@@ -64,4 +66,22 @@
 	margin-top:17px;
 	display:inline-block;
 	text-align:center;
+}
+
+.bonuses {
+	background-image: url(i/topb.png);
+	background-position-y:456px;
+	background-position-x:-21px;
+	height:62px;
+	width:66px;
+	margin-top:4px;
+}
+
+.bonusInner {
+	width:inherit;
+	margin-top:11px;
+	display:inline-block;
+	text-align:center;
+	font-size:26px;
+	color:#ddd;
 }
