--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -3,8 +3,9 @@
 	color: #eee;
 	border-radius: 5px;
 	background: #d35f5f;
-	font-size: 1.4em;
-	margin-top: 22px;
+	/* font-size: 1.4em; */
+	font-size: 28px;
+	margin-top: 12px;
 	margin-right: 0px;
 	margin-bottom: 10px;
 	margin-left: 10px;
