--- a/src/views/StoreView/css/ResultsBar.module.css
+++ b/src/views/StoreView/css/ResultsBar.module.css
@@ -85,3 +85,43 @@
 	font-size:26px;
 	color:#ddd;
 }
+
+@media only screen and (min-width: 100px) and (max-width: 900px) {
+
+.calendar {
+	margin: 0 20px;
+	background-position-y:718px;
+	background-position-x:-16px;
+}
+
+.calendarInner {
+	margin-top:0px;
+	font-size:20px;
+}
+
+.res {
+	font-size:20px;
+	border-radius: 2px;
+	padding: 0px 10px;
+	margin-top: 4px;
+	width: 20px;
+	height: 0px;
+	border-bottom: none;
+}
+
+.resbar {
+	height: 45px;
+	padding-top:5px;
+}
+
+.empty {
+	font-size:20px;
+	border-radius: 2px;
+	padding: 0px 10px;
+	margin-top: 7px;
+	width: 20px;
+	height: 0px;
+	border-bottom: none;
+}
+
+}
