--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -4,6 +4,7 @@
 }
 
 .store {
+	filter: brightness(0.8) saturate(1.3);
 	position: relative;
 	z-index: 9001;
   background-color: grey;
@@ -27,7 +28,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex: 2 1;
-	background: #846464;
+	border-left: 6px solid rgba(255,255,255,0.3);
 	padding-bottom: 20px;
 }
 
@@ -76,5 +77,7 @@
 .rampsArea {
 	border-left: 5px dashed orange;
 }
+
+.zonesRow { padding-bottom: 10px; }
 
 }
