--- a/src/views/StoreView/css/Timer.module.css
+++ b/src/views/StoreView/css/Timer.module.css
@@ -24,4 +24,17 @@
 	display: none;
 	background: grey; }
 
+@media only screen and (min-width: 100px) and (max-width: 900px) {
+
+.timer, .timerZero {
+	font-size:20px;
+	border-radius: 2px;
+	padding: 0px 10px;
+	margin-top: 7px;
+	width: 20px;
+	height: 0px;
+	border-bottom: none;
+}
+
+}
 
