--- a/src/views/StoreView/css/TopBar.module.css
+++ b/src/views/StoreView/css/TopBar.module.css
@@ -5,3 +5,10 @@
 	top:0;
 	padding-top:15px;
 }
+
+@media only screen and (min-width: 100px) and (max-width: 900px) {
+.topbar {
+	height: 45px;
+	padding-top:5px;
+}
+}
