--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -28,7 +28,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex: 2 1;
-	border-left: 6px solid rgba(255,255,255,0.3);
+	border-left: 6px dashed rgba(255,255,255,0.3);
 	padding-bottom: 20px;
 }
 
