--- a/src/views/StoreView/css/BottomBar.module.css
+++ b/src/views/StoreView/css/BottomBar.module.css
@@ -1,7 +1,7 @@
 .bottombar {
 	display: flex;
 	background: #979797;
-	height: 90px;
+	height: 100px;
 	top:0;
 	padding-top:15px;
 	border-bottom: 5px solid #ccc;
@@ -14,7 +14,7 @@
 	background-position-x: -660px;
 	background-position-y: -47px;
 	background-repeat: no-repeat;
-	margin: 0 auto 20px;
+	margin: 15px auto 15px;
 }
 
 .innerPts {
@@ -26,9 +26,65 @@
 	text-align: center;
 }
 
+.brain:hover, .muscle:hover {
+	filter: brightness(1.4) saturate(1);
+}
+
+.brain, .muscle {
+	width:90px;
+	height:80px;
+	background-color:#d2d2d2;
+	cursor: pointer;
+	margin: 0 0 15px 15px;
+	background-position-y: -19px;
+	border-radius: 7px;
+	border-bottom: 6px solid #a8b7c2;
+}
+
+.brain {
+	background-image: url(i/sprite3.png);
+	background-position-x: -38px;
+	background-repeat: no-repeat;
+}
+	
+.muscle {
+	background-image: url(i/sprite3.png);
+	background-position-x: -148px;
+	background-repeat: no-repeat;
+}
+	
+.innerCost {
+	background-image: url(i/sprite3.png);
+	background-position-y: -22px;
+	background-position-x: -255px;
+	margin-left:1px;
+	margin-top:2px;
+	font-size:19px;
+	font-weight:bold;
+	color:#d7d7d7;
+	width:40px;
+	text-align:center;
+}
+
 @media only screen and (min-width: 100px) and (max-width: 900px) {
+
 .bottombar {
 	height: 45px;
 	padding-top:5px;
 }
+
+.totalPts {
+	width:60px;
+	height:40px;
+	background-image: url(i/sprite1mob.png);
+	background-position-x: -365px;
+	background-position-y: -25px;
+	background-repeat: no-repeat;
+}
+.innerPts {
+	font-size: 20px;
+	font-weight: normal;
+	margin: 3px auto;
+}
+
 }
