--- a/src/views/StoreView/css/BottomBar.module.css
+++ b/src/views/StoreView/css/BottomBar.module.css
@@ -5,6 +5,7 @@
 	top:0;
 	padding-top:15px;
 	border-bottom: 5px solid #ccc;
+	position: relative;
 }
 
 .totalPts {
@@ -15,6 +16,8 @@
 	background-position-y: -47px;
 	background-repeat: no-repeat;
 	margin: 15px auto 15px;
+	position:absolute;
+	right: 25px;
 }
 
 .innerPts {
